apps/vaultwarden/overlays/nishir-tailnet/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: vaultwarden
spec:
  gatewayClassName: vaultwarden
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: vaultwarden-i-shikanime-studio-tls
            group: ""
            kind: Secret
