apps/vaultwarden/overlays/nishir-tailnet/httproute-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden-redirect
spec:
  hostnames:
      - vaultwarden.i.shikanime.studio
  parentRefs:
    - name: vaultwarden
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
