apps/vaultwarden/overlays/nishir-tailnet/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
spec:
  hostnames:
    - vaultwarden.i.shikanime.studio
  parentRefs:
    - name: vaultwarden
      sectionName: https
  rules:
    - backendRefs:
        - name: vaultwarden
          port: http
